# terminal_soundboard

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  display.rs  main.rs
src/soundtree/: mod.rs  parser.rs
