[package]
name = "terminal_soundboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.13", features = ["derive"] }
global-hotkey = "0.4.1"
winit = "0.29.9"
kira = { git = "https://github.com/tesselode/kira.git", rev = "ef5a7b6" }
rand = "0.8.5"
cpal = "0.15.1"
clearscreen = "2.0.1"
ctrlc = "3.4.2"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
